--- a/.github/workflows/deploy-paper.yml
+++ b/.github/workflows/deploy-paper.yml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: mkdir out
+      - run: echo '<a href="./sds-demo-lncs.pdf">SDS (lncs)</a><br><a href="./sds-demo-acm.pdf">SDS (acm)</a><br><a href="./sds-demo-ieee.pdf">SDS (ieee)</a>' > ./out/index.html
       - uses: ajuvercr/markdown-templates@v1
         with:
           paper: sds-demo
+          location: ${{github.workspace}}/
       - uses: peaceiris/actions-gh-pages@v3
         with:
           target_branch: gh-pages
-          publish_dir: ./out
+          publish_dir: ${{github.workspace}}/out
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
